# msc_Irp6

./: .gitignore
msc_mlotz_pkg/: CMakeLists.txt  package.xml
msc_mlotz_pkg/src/: OPSinjector  overScript.py  test_reg.cpp  test_reg.h
msc_mlotz_pkg/src/compConfigs/: repoUniConf.cpf
msc_mlotz_pkg/src/config/: repo_irp6-ot-hardware-inside.ops  repo_irp6-ot-hardware.ops  repo_irp6-ot-inside.ops
msc_mlotz_pkg/src/launch/: repo_irp6-ot-hardware.launch
msc_mlotz_pkg/src/plotterMatlab/: plotter.m
